--- a/documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/Prácticas/Practica_2/p2.ipynb
+++ b/documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/Prácticas/Practica_2/p2.ipynb
@@ -1411,11 +1411,230 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "17172928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Valores por defecto\n",
+    "CIFRAS = 16                     # Número de cifras con el que queremos calcular\n",
+    "TOL = 10**(-CIFRAS)             # Tolerancia\n",
+    "\n",
+    "def integracion_Romberg(f, a, b, tol=TOL):\n",
+    "\tR=[]  # Matriz de Romberg\n",
+    "\n",
+    "\tcontinuar = True\n",
+    "\tj=0\n",
+    "\n",
+    "\twhile continuar:\n",
+    "\t\tR.append(np.zeros(j+1))\n",
+    "\t\tR[j][0] = formula_trapecios(f,a,b,2**j)\n",
+    "\n",
+    "\t\tfor k in range(1,j+1):\n",
+    "\t\t\tR[j][k] = (4**k*R[j][k-1] - R[j-1][k-1])/(4**k-1)\n",
+    "\t\t\n",
+    "\t\t# Compruebo la tolerancia una vez tenga 2 valores calculados\n",
+    "\t\tif(j>0):\n",
+    "\t\t\tif(abs(R[j][j] - R[j-1][j-1])<tol):\n",
+    "\t\t\t\tcontinuar = False\n",
+    "\t\t\t\tN = j\n",
+    "\n",
+    "\t\tj+=1\n",
+    "\n",
+    "\treturn {\n",
+    "        \"resultado\": R[N][N], \n",
+    "        \"niter\":N,\n",
+    "\t\t\t\t\"matriz\": R\n",
+    "    }\n",
+    "\n",
+    "# Fórmula de Simspon simpre\n",
+    "def S(f,a,b):\n",
+    "\th=(b-a)/2\n",
+    "\tm=(a+b)/2\n",
+    "\treturn (h/3)*(f(a)+4*f(m)+f(b))\n",
+    "\n",
+    "\n",
+    "def integracion_Adaptativa(f, a, b, tol=TOL):\n",
+    "\n",
+    "\tm = (a+b)/2\n",
+    "\tt = abs(S(f,a,b)- S(f,a,m)-S(f,m,b))\n",
+    "\n",
+    "\t# Restrinjo n para que no se pase de iteraciones\n",
+    "\tif(t<10*tol):\n",
+    "\t\treturn S(f,a,b) # En este caso aceptamos la aproximación\n",
+    "\telse:\n",
+    "\t\treturn integracion_Adaptativa(f,a,m,tol/2)+integracion_Adaptativa(f,m,b,tol/2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a47957f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Con mi DNI, estaremos integrando entre 0 y 9 el polinomio p(x)=\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 9 x^{7} + 4 x^{5} + 8 x^{4} + 6 x^{3} + 6 x^{2} + 6 x + 7$"
+      ],
+      "text/plain": [
+       "9*x**7 + 4*x**5 + 8*x**4 + 6*x**3 + 6*x**2 + 6*x + 7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El resultado \"exacto\" es: 48887939.0250000\n",
+      "\n",
+      "\u001b[1m\u001b[30m\u001b[47mCálculo usando la integración Romberg:\u001b[0m\n",
+      "\tResultado: 48887939.025\n",
+      "\tNúmero de iteraciones: 4\n",
+      "\u001b[1m\u001b[30m\u001b[47mCálculo usando la integración adaptativa:\u001b[0m\n",
+      "\tResultado: 48887939.025000036\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Probamos ambas funciones\n",
+    "# Mi DNI es 76668409W por lo que\n",
+    "DNI = [7, 6, 6, 6, 8, 4, 0, 9]\n",
+    "def p(x):\n",
+    "    res=0\n",
+    "    for i in range(len(DNI)):\n",
+    "        res+=DNI[i]*x**i\n",
+    "    return res\n",
+    "\n",
+    "# Solo para visualizarla y calcular el resultado \"exacto\"\n",
+    "p_sym =  sum(c * x**i for i, c in enumerate(DNI))\n",
+    "\n",
+    "a = min(DNI)\n",
+    "b = max(DNI)\n",
+    "\n",
+    "r_romberg = integracion_Romberg(p, a, b)\n",
+    "\n",
+    "# Le he bajado la tolerancia porque tardaba demasiado\n",
+    "r_adaptativa = integracion_Adaptativa(p, a, b, 0.00000001)\n",
+    "\n",
+    "print(f\"Con mi DNI, estaremos integrando entre {a} y {b} el polinomio p(x)=\")\n",
+    "display(p_sym)\n",
+    "print(f\"El resultado \\\"exacto\\\" es: {sp.integrate(p_sym, (x,a,b)).evalf()}\\n\")\n",
+    "\n",
+    "print(Title(f\"Cálculo usando la integración Romberg:\"))\n",
+    "print(f\"\\tResultado: {r_romberg[\"resultado\"]}\")\n",
+    "print(f\"\\tNúmero de iteraciones: {r_romberg[\"niter\"]}\")\n",
+    "\n",
+    "print(Title(f\"Cálculo usando la integración adaptativa:\"))\n",
+    "print(f\"\\tResultado: {r_adaptativa}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d72a35a5",
    "metadata": {},
    "source": [
     "### Ejercicio 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57853b88",
+   "metadata": {},
+   "source": [
+    "Calcule la misma integral del ejercicio 9 pero utilizando la orden `quad` y compare los resultados de la integración Romberg y adaptativa manuales con los de la orden `quad`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa8c713f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Con mi DNI, estaremos integrando entre 0 y 9 el polinomio p(x)=\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 9 x^{7} + 4 x^{5} + 8 x^{4} + 6 x^{3} + 6 x^{2} + 6 x + 7$"
+      ],
+      "text/plain": [
+       "9*x**7 + 4*x**5 + 8*x**4 + 6*x**3 + 6*x**2 + 6*x + 7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El resultado \"exacto\" es: 48887939.02500001\n",
+      "\n",
+      "\u001b[1m\u001b[30m\u001b[47mCálculo usando la integración Romberg:\u001b[0m\n",
+      "\tResultado: 48887939.025\n",
+      "\tNúmero de iteraciones: 4\n",
+      "\tError: 1.4901161193847656e-08\n",
+      "\u001b[1m\u001b[30m\u001b[47mCálculo usando la integración adaptativa:\u001b[0m\n",
+      "\tResultado: 48887939.025000036\n",
+      "\tError: 2.2351741790771484e-08\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.integrate import quad\n",
+    "# Recuperamos los resultados del ejercicio anterior:\n",
+    "\n",
+    "# Mi DNI es 76668409W por lo que\n",
+    "DNI = [7, 6, 6, 6, 8, 4, 0, 9]\n",
+    "def p(x):\n",
+    "    res=0\n",
+    "    for i in range(len(DNI)):\n",
+    "        res+=DNI[i]*x**i\n",
+    "    return res\n",
+    "\n",
+    "# Solo para visualizarla\n",
+    "p_sym =  sum(c * x**i for i, c in enumerate(DNI))\n",
+    "\n",
+    "a = min(DNI)\n",
+    "b = max(DNI)\n",
+    "\n",
+    "r_romberg = integracion_Romberg(p, a, b)\n",
+    "\n",
+    "# Le he bajado la tolerancia porque tardaba demasiado\n",
+    "r_adaptativa = integracion_Adaptativa(p, a, b, 0.00000001)\n",
+    "\n",
+    "r_exacto, abserr = quad(p, a, b)\n",
+    "\n",
+    "print(f\"Con mi DNI, estaremos integrando entre {a} y {b} el polinomio p(x)=\")\n",
+    "display(p_sym)\n",
+    "print(f\"El resultado \\\"exacto\\\" es: {r_exacto}\\n\")\n",
+    "\n",
+    "print(Title(f\"Cálculo usando la integración Romberg:\"))\n",
+    "print(f\"\\tResultado: {r_romberg[\"resultado\"]}\")\n",
+    "print(f\"\\tNúmero de iteraciones: {r_romberg[\"niter\"]}\")\n",
+    "print(f\"\\tError: {abs(r_exacto - r_romberg[\"resultado\"])}\")\n",
+    "\n",
+    "print(Title(f\"Cálculo usando la integración adaptativa:\"))\n",
+    "print(f\"\\tResultado: {r_adaptativa}\")\n",
+    "print(f\"\\tError: {abs(r_exacto - r_adaptativa)}\")\n",
+    "\n",
+    "# Se ve que la romberg es mejor pero también es verdad que se le ha bajado la tolerancia a adaptativa"
    ]
   }
  ],
