--- a/documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/Prácticas/Practica_2/p2.ipynb
+++ b/documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/Prácticas/Practica_2/p2.ipynb
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 160,
    "id": "2ae155ec",
    "metadata": {},
    "outputs": [
@@ -736,33 +736,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[exp(cos(2))/5 + exp(cos(1))*sin(1)/2\n",
-      " -4.5*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 7.12200081215287\n",
-      " -49.5*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 84.2580313448303\n",
-      " -499.5*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 856.683606766442\n",
-      " -4999.5*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 8581.04815394035\n",
-      " -49999.5*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 85824.7045235432\n",
-      " -499999.5*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 858261.26930954\n",
-      " -4999999.5*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 8582626.9172785\n",
-      " -49999999.5*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 85826283.3969791\n",
-      " -499999999.5*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 858262848.193985\n",
-      " -4999999999.5*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 8582628496.16405\n",
-      " -49999999999.5*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 85826284975.8647\n",
-      " -499999999999.5*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 858262849772.871\n",
-      " -4999999999999.5*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 8582628497742.94\n",
-      " -49999999999999.5*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 85826284977443.6\n",
-      " -499999999999999.0*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 858262849774450.0\n",
-      " -5.0e+15*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 8.58262849774452e+15\n",
-      " -5.0e+16*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 8.58262849774452e+16\n",
-      " -5.0e+17*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 8.58262849774452e+17\n",
-      " -5.0e+18*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 8.58262849774452e+18\n",
-      " -5.0e+19*exp(cos(1)) + exp(cos(1))*sin(1)/2 + 8.58262849774452e+19]\n"
+      "\u001b[1m\u001b[30m\u001b[47mErrores cometidos con derivada progresiva:\u001b[0m\n",
+      "[0.854119967908255 0.119838449606543 0.0122125025833004\n",
+      " 0.00122312718892359 0.000122331027588407 1.22332700112082e-5\n",
+      " 1.22347693376490e-6 1.19360135775182e-7 3.27627398544195e-8\n",
+      " -1.78179634824360e-7 -7.33291147136939e-7 8.14849304986431e-6\n",
+      " -4.73626581813935e-5 0.00172899418121886 0.00394944023046917\n",
+      " -0.306913006664574 1.58046613519819 1.58046613519819 1.58046613519819\n",
+      " 1.58046613519819 1.58046613519819]\n",
+      "\u001b[1m\u001b[30m\u001b[47mEvolución de las aproximaciones:\u001b[0m\n",
+      "[-0.726346, -1.46063, -1.56825, -1.57924, -1.58034, -1.58045, -1.58046, -1.58047, -1.58047, -1.58047, -1.58047, -1.58046, -1.58051, -1.57874, -1.57652, -1.88738, 0, 0, 0, 0, 0]\n",
+      "\n",
+      "\u001b[1m\u001b[30m\u001b[47mErrores cometidos con derivada centrada:\u001b[0m\n",
+      "[2.87364870818546 3.16290016965575 3.16095254983720 3.16093247325078\n",
+      " 3.16093227242470 3.16093227041853 3.16093227038522 3.16093227149545\n",
+      " 3.16093225983810 3.16093228204256 3.16093244857602 3.16092412190333\n",
+      " 3.16092412190333 3.16031349923979 3.15698283016591 3.30131182336718\n",
+      " 2.13557764751077 1.58046613519819 1.58046613519819 1.58046613519819\n",
+      " 1.58046613519819]\n",
+      "\u001b[1m\u001b[30m\u001b[47mEvolución de las aproximaciones:\u001b[0m\n",
+      "[1.29318, 1.58243, 1.58049, 1.58047, 1.58047, 1.58047, 1.58047, 1.58047, 1.58047, 1.58047, 1.58047, 1.58046, 1.58046, 1.57985, 1.57652, 1.72085, 0.555112, 0, 0, 0, 0]\n"
      ]
     }
    ],
    "source": [
-    "# TODO\n",
-    "\n",
     "x = sp.symbols('x')\n",
     "\n",
     "# Definimos la función f(x)\n",
@@ -771,11 +768,37 @@
     "a=1\n",
     "n=20\n",
     "\n",
-    "vexacto = (sp.diff(f(x),x)).subs({x:a})\n",
-    "dersnum = np.array([(f(a+10**(-j))-f(a))/(10**(-j)) for j in range(n+1)])\n",
     "\n",
-    "errores = np.array(dersnum) - vexacto\n",
-    "print(errores)"
+    "vexacto = (sp.diff(f(x),x)).subs({x:a}).evalf()\n",
+    "\n",
+    "# Calculamos los errores con la derivada progresiva\n",
+    "dersnum_pro = np.array([(f(a+10**(-j)).evalf()-f(a).evalf())/(10**(-j)) for j in range(n+1)])\n",
+    "errores_pro = np.array(dersnum_pro) - vexacto\n",
+    "\n",
+    "# Calculamos los errores con la derivada centrada\n",
+    "dersnum_cen = np.array([(f(a-10**(-j)).evalf()-f(a+10**(-j)).evalf())/(2*10**(-j)) for j in range(n+1)])\n",
+    "errores_cen = np.array(dersnum_cen) - vexacto\n",
+    "\n",
+    "print(Title(f\"Errores cometidos con derivada progresiva:\"))\n",
+    "print(errores_pro)\n",
+    "\n",
+    "print(Title(f\"Evolución de las aproximaciones:\"))\n",
+    "print([sp.N(dersnum_pro[k],6) for k in range(n+1)]) # con 6 cifras significativas\n",
+    "print()\n",
+    "\n",
+    "print(Title(f\"Errores cometidos con derivada centrada:\"))\n",
+    "print(errores_cen)\n",
+    "\n",
+    "print(Title(f\"Evolución de las aproximaciones:\"))\n",
+    "print([sp.N(dersnum_cen[k],6) for k in range(n+1)]) # con 6 cifras significativas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95a322e1",
+   "metadata": {},
+   "source": [
+    "y vemos que se produce el mismo fenómeno aunque la derivada centrada tiene resultados más \"estables\" al principio"
    ]
   },
   {
